[tool.poetry]
name = "plaidweb.site"
version = "0.1.0"
description = ""
authors = ["fluffy <fluffy@beesbuzz.biz>"]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "*"
publ = "*"
flask-hookserver = "*"
python-memcached = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
